--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">Senior Software Developer</h3>
+                                                <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE ENGINEER </h3>
                                                 <div class="resume-company-name ml-auto">PayBright</div>
                                             </div><!--//row-->
                                             <div class="resume-position-time">August 2019 - Present</div>
@@ -153,43 +153,65 @@
 
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">Co-Founder & Lead Developer</h3>
-                                                <div class="resume-company-name ml-auto">To-do Lists</div>
+                                                <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE DEVELOPER</h3>
+                                                <div class="resume-company-name ml-auto">Fleet Complete</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">2012 - 2014</div>
+                                            <div class="resume-position-time">November 2017 - November 2018</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
-                                            <p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Client: Planete Courier; Project: Courier Complete (Contract)</h4>
+                                            <p>Courier Complete (CC) is a courier service and delivery software. Planete Courier runs its business on Courier Complete. They are also one of the biggest clients of Fleet Complete.</p>
+											<p>Represented Fleet Complete on an AT&T IoT Civic Hackathon Indianapolis and also a key member of the development team. - https://att.fleetcomplete.com/blogs/firstsense-app-a-fleet-complete-brainchild-at-att-iot-civic-hackathon/
+											</p>
+                                            <ul>
+                                                <li>Dedicated developer to Planete Courier for Courier Complete (CC) Upgrade. </li> 
+                                                <li>CC Application, a desktop application (VB6), is being upgraded to a web application using REST API and Angular 6.</li> 
+                                                <li>CC Web, the customer-facing site for placing and tracking order, ASP.Net web application, is being upgraded to MVC5 application using Entity framework.</li> 
+                                                <li>Create, update and maintain Views, Stored Procedures, and Trigger.</li>
+                                            </ul>
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                             <ul class="list-inline">
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Django</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">JavaScript</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Node.js</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Require.js</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML/SASS</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.NET</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">SQL Server</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">DevExtrema</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Angular 6</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net Core</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">WebAPI 2</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">MVC 5</span></li>
                                             </ul>
                                         </div><!--//resume-timeline-item-desc-->
 
                                     </article><!--//resume-timeline-item-->
 
-                                    <article class="resume-timeline-item position-relative">
+                                    <article class="resume-timeline-item position-relative pb-5">
 
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">Web Developer <small class="text-muted">(Intern)</small></h3>
-                                                <div class="resume-company-name ml-auto">Amazon</div>
+                                                <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE DEVELOPER </h3>
+                                                <div class="resume-company-name ml-auto">Condo Control Central</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">2011 - 2012</div>
+                                            <div class="resume-position-time">May 2017 - November 2017</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
-                                            <p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum.</p>
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: Condo Control Central Web Application (Contract)</h4>
+                                            <p>Condo Control Central is a property management software company. The web application is the customer-facing web site used by Property managers, security and property owners. The site is an MVC application, there is also a web API, an admin application, a mobile application, and some background services  </p>
+                                            <ul>
+                                                <li>Developed and implemented new features, fixed bugs, and enhanced existing functionality.</li> 
+                                                <li>Participated in code and functional specification reviews and new product initiative discussions.</li> 
+                                                <li>Upgrades technology and look and feel of parts of the platform.</li> 
+                                                <li>Create a Status Certificate portal for ordering Status certificate for Condo Units</li>
+                                            </ul>
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                             <ul class="list-inline">
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Ruby on Rails</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">jQuery</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">HTML/LESS</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">MongoDB</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.NET</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">SQL Server 2016</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">DevExpess</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">MVC 3</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">JavaScript</span></li>
                                             </ul>
                                         </div><!--//resume-timeline-item-desc-->
 
@@ -326,31 +348,38 @@
                             <div class="resume-section-content">
                                 <ul class="list-unstyled">
                                     <li class="mb-2">
-                                        <div class="resume-degree font-weight-bold">MSc in Computer Science</div>
-                                        <div class="resume-degree-org">University College London</div>
-                                        <div class="resume-degree-time">2010 - 2011</div>
+                                        <div class="resume-degree font-weight-bold">Information Technology Solutions, Graduate Certificate </div>
+                                        <div class="resume-degree-org">Humber Institute of Technology and Advanced Learning, Toronto, ON, Canada</div>
+                                        <div class="resume-degree-time">2012 - 2014</div>
                                     </li>
                                     <li>
-                                        <div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
-                                        <div class="resume-degree-org">Imperial College London</div>
-                                        <div class="resume-degree-time">2007 - 2010</div>
+                                        <div class="resume-degree font-weight-bold">Bachelor of Technology in Electrical Engineering</div>
+                                        <div class="resume-degree-org">West Bengal University of Technology, India</div>
+                                        <div class="resume-degree-time">2009 - 2012 </div>
+                                    </li>
+									<li>
+                                        <div class="resume-degree font-weight-bold">Diploma in Electrical Engineering</div>
+                                        <div class="resume-degree-org">West Bengal State Council of Technical Education, India</div>
+                                        <div class="resume-degree-time">2006 - 2009</div>
                                     </li>
                                 </ul>
                             </div>
                         </section><!--//education-section-->
                         <section class="resume-section reference-section mb-5">
-                            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards</h2>
+                            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">ACHIEVEMENTS AND AWARDS</h2>
                             <div class="resume-section-content">
                                 <ul class="list-unstyled resume-awards-list">
                                     <li class="mb-2 pl-4 position-relative">
                                         <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
-                                        <div class="resume-award-name">Award Name Lorem</div>
-                                        <div class="resume-award-desc">Award desc goes here, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</div>
+                                        <div class="resume-award-desc">Represented Fleet Complete on an AT&T IoT Civic Hackathon Indianapolis and also a key member of the development team.</div>
                                     </li>
-                                    <li class="mb-0 pl-4 position-relative">
+                                    <li class="mb-2 pl-4 position-relative">
                                         <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
-                                        <div class="resume-award-name">Award Name Ipsum</div>
-                                        <div class="resume-award-desc">Award desc goes here, ultricies nec, pellentesque.</div>
+                                        <div class="resume-award-desc">Delivered a USD 3.0 million project for City of Ottawa in 2016, got appreciated and promoted.</div>
+                                    </li>
+									<li class="mb-2 pl-4 position-relative">
+                                        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
+                                        <div class="resume-award-desc">Presented a marketing software at a showcase event at CBC news, representing the Department of Media Studies, Humber College and AMA Inc. The product was bought by Shopper’s Drugmart and two other companies.</div>
                                     </li>
                                 </ul>
                             </div>
@@ -359,9 +388,9 @@
                             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Language</h2>
                             <div class="resume-section-content">
                                 <ul class="list-unstyled resume-lang-list">
-                                    <li class="mb-2"><span class="resume-lang-name font-weight-bold">English</span> <small class="text-muted font-weight-normal">(Native)</small></li>
-                                    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">French</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
-                                    <li><span class="resume-lang-name font-weight-bold">Spanish</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
+                                    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Bengal</span> <small class="text-muted font-weight-normal">(Native)</small></li>
+                                    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">English</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
+                                    <li><span class="resume-lang-name font-weight-bold">Hindi</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
                                 </ul>
                             </div>
                         </section><!--//language-section-->
@@ -369,9 +398,9 @@
                             <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Interests</h2>
                             <div class="resume-section-content">
                                 <ul class="list-unstyled">
-                                    <li class="mb-1">Climbing</li>
-                                    <li class="mb-1">Snowboarding</li>
-                                    <li class="mb-1">Cooking</li>
+                                    <li class="mb-1">Photography</li>
+                                    <li class="mb-1">Badminton</li>
+                                    <li class="mb-1">Traveling</li>
                                 </ul>
                             </div>
                         </section><!--//interests-section-->
