--- a/index.html
+++ b/index.html
@@ -242,20 +242,20 @@
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">T-SQL</div>
+                                            <div class="resume-skill-name">SQL/T-SQL</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">.Net Core</div>
+                                            <div class="resume-skill-name">.Net/.Net Core</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 83%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
 
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">Web API</div>
+                                            <div class="resume-skill-name">Web API/Web Services</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
@@ -276,7 +276,7 @@
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">SPA</div>
+                                            <div class="resume-skill-name">Code Review/Deployment</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
@@ -305,35 +305,34 @@
                                         -->
                                         <li class="list-inline-item"><span class="badge badge-light">C#</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">T-SQL</span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light">JSON</span></li> 
-                                        <li class="list-inline-item"><span class="badge badge-light">XML</span></li>
+                                      	<li class="list-inline-item"><span class="badge badge-light">Web API</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">.Net Core</span></li>
+                                      	<li class="list-inline-item"><span class="badge badge-light">Code Review</span></li>
+                                      	<li class="list-inline-item"><span class="badge badge-light">Code Deployment</span></li>
+                                       	<li class="list-inline-item"><span class="badge badge-light">Solutioning</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">JSON/XML</span></li> 
                                         <li class="list-inline-item"><span class="badge badge-light">JavaScript</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">JQuery</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Ajax</span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light">Html5</span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light">CSS3 (BOOTSTRAP 3)</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Html</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">CSS (BOOTSTRAP)</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">VB.Net</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Angular</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Knockout JS </span></li> 
-										<li class="list-inline-item"><span class="badge badge-light">React JS </span></li> 
- 	
-                                        <li class="list-inline-item"><span class="badge badge-light">Web API</span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light">.Net Core</span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light">ASP.NET</span></li> 
-                                        <li class="list-inline-item"><span class="badge badge-light">ADO.NET</span></li> 
-                                        <li class="list-inline-item"><span class="badge badge-light">Entity Framework</span></li> 
+										<li class="list-inline-item"><span class="badge badge-light">Node JS</span></li> 
+										<li class="list-inline-item"><span class="badge badge-light">React JS </span></li> 	
+                                        <li class="list-inline-item"><span class="badge badge-light">ADO.NET/Entity Framework</span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">Mongo DB</span></li> 
 										<li class="list-inline-item"><span class="badge badge-light">MVC 5</span></li> 
                                         <li class="list-inline-item"><span class="badge badge-light">SPA</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">Web Services</span></li> 
-                                        <li class="list-inline-item"><span class="badge badge-light">REST </span></li>
-                                        <li class="list-inline-item"><span class="badge badge-light">SOAP </span></li> 
+                                        <li class="list-inline-item"><span class="badge badge-light">REST/SOAP </span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">SAAS </span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">PowerShell </span></li>
                                         <li class="list-inline-item"><span class="badge badge-light"> Dot Net Nuke CMS </span></li> 
                                         <li class="list-inline-item"><span class="badge badge-light">Umbraco CMS </span> </li> 
 										
-                                        <li class="list-inline-item"><span class="badge badge-light"> Dynamics CRM 2016</li> 
-                                        <li class="list-inline-item"><span class="badge badge-light">Dynamics CRM 365</li>
+                                        <li class="list-inline-item"><span class="badge badge-light"> Dynamics CRM</li> 
+                                        
 <!-- •	Databases: 	Microsoft SQL Server 2008 and 2012, Oracle 11g and My SQL
 •	IDEs: 	Visual Studio 2012 - 2017 , SQL Server 2012 – 2016, VS Code, NetBeans, Eclipse, Oracle.
 •	Source Control:   Team Foundation Server (TFS), SourceTree, Tortoise SVN, GitLab, GitHub, Azure DevOps.
@@ -423,5 +422,3 @@
 
 </body>
 </html>
-
-
