--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
                     <div class="resume-section-content">
                         <p class="mb-0">
                             <ul style="list-style-type:disc;">
-                                <li>Senior Software developer with 7+ years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.</li>
-                                <li>Strong in product development, technology upgrade and integration projects.</li>
-                                <li>Strong in R&D, Professional Services and full-stack software Development</li>
-                                <li>Passionate about writing clean, reusable and robust code</li>
+                                <li>Senior software developer with around 9 years of experience in Microsoft technologies (.Net), C#, SQL, and API development.</li>
+                                <li>Strong in product development, product rewrite, technology upgrade, and integration projects.</li>
+                                <li>Backend architecture and development, lead the team and mentor juniors, and interview developers</li>
+                                <li>Strong analytical problem-solving ability, cooperative, team player, and well organized</li>
+				<li>Passionate about writing clean, reusable, and robust code.</li>
                                 <li>Test driven development. Domain driven design</li>
                                 <li>Developing Scalable applications using design patterns and SOLID principles</li>
-                                <li>Efficient knowledge transfer to peers and mentoring of junior team members.</li>
+                                <li>Worked on Python, DevExpress, Kendo UI, Umbraco Dot Net Nuke, and Dynamics CRM</li>
                                 <li>Effective communication and teamwork skills.Strong analytical problem-solving ability, cooperative, team player, and well organized.</li>
                                 <li>Ontario Colleges Graduate Certificate in Information Technology Solutions from Humber College, Toronto, ON. Bachelor of Technology degree in Electrical Engineering from West Bengal University of Technology, India.</li>
-                                <li>Worked on Angular 6, DevExpress, Kendo UI, Umbraco Dot Net Nuke and Dynamics CRM. Currently evaluating React JS, Knockout JS, Microsoft Azure and AWS for new initiatives.</li>
+                                <li>Currently evaluating React JS, Knockout JS, Microsoft, AWS for new initiatives.</li>
                             </ul>
                         </p>
                     </div>
@@ -84,7 +85,7 @@
                                                 <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE ENGINEER </h3>
                                                 <div class="resume-company-name ml-auto">PayBright</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">August 2019 - Present</div>
+                                            <div class="resume-position-time">August 2019 - May 2021</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: PayBright (Core Loan systems)</h4>
