Updating work experience

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
                                                 <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE ENGINEER </h3>
-                                                <div class="resume-company-name ml-auto">PayBright</div>
+                                                <div class="resume-company-name ml-auto">Affirm (PayBright)</div>
                                             </div><!--//row-->
                                             <div class="resume-position-time">August 2019 - May 2021</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
-                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: PayBright (Core Loan systems)</h4>
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: Affirm (PayBright)(Core Loan systems)</h4>
                                             <p>The core loan system is the end to end solution on which PayBright operates. PayBright provides small to medium loans to customers on their retail purchases instore and online. There are different products for different type of merchants form integrated solution with Samsung, to pay in 4 solution with Wayfair, to virtual card solution with eBay, platform solutions with Shopify and Klarna that PayBright offers. </p>
                                             <ul>
 												<li>Develop, update, deploy and maintain the core loan system features. Design and implement measures to ensure data integrity and ETL server.</li> 
