Update in progress

--- a/index.html
+++ b/index.html
@@ -56,16 +56,14 @@
                     <div class="resume-section-content">
                         <p class="mb-0">
                             <ul style="list-style-type:disc;">
-                                <li>Senior Software developer with 7+ years of experience in Microsoft technologies (.Net), C#, SQL, and Web Development.</li>
-                                <li>Strong in product development, technology upgrade and integration projects.</li>
-                                <li>Strong in R&D, Professional Services and full-stack software Development</li>
-                                <li>Passionate about writing clean, reusable and robust code</li>
-                                <li>Test driven development. Domain driven design</li>
+                                <li>Senior software developer with around 9 years of experience in Microsoft technologies (.Net), C#, SQL, and API development.</li>
+                                <li>Strong in product development, product rewrite, technology upgrade, and integration projects.</li>
+                                <li>Backend architecture and development, lead the team and mentor juniors, and build team.</li>
+                                <li>Strong analytical problem-solving ability, cooperative, team player, and well organized.</li>
+                                <li>Passionate about writing clean, reusable, and robust code. Test-driven development. Domain-driven design.</li>
                                 <li>Developing Scalable applications using design patterns and SOLID principles</li>
-                                <li>Efficient knowledge transfer to peers and mentoring of junior team members.</li>
-                                <li>Effective communication and teamwork skills.Strong analytical problem-solving ability, cooperative, team player, and well organized.</li>
-                                <li>Ontario Colleges Graduate Certificate in Information Technology Solutions from Humber College, Toronto, ON. Bachelor of Technology degree in Electrical Engineering from West Bengal University of Technology, India.</li>
-                                <li>Worked on Angular 6, DevExpress, Kendo UI, Umbraco Dot Net Nuke and Dynamics CRM. Currently evaluating React JS, Knockout JS, Microsoft Azure and AWS for new initiatives.</li>
+                                <li>Worked on Python, DevExpress, Kendo UI, Umbraco Dot Net Nuke, and Dynamics CRM.</li>
+                                <li>Currently evaluating Kubernetes, Terraforms, AWS, Azure, React for new initiatives.</li>
                             </ul>
                         </p>
                     </div>
@@ -82,31 +80,38 @@
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
                                                 <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE ENGINEER </h3>
-                                                <div class="resume-company-name ml-auto">PayBright</div>
+                                                <div class="resume-company-name ml-auto">Affirm (PayBright)</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">August 2019 - Present</div>
+                                            <div class="resume-position-time">August 2019 - May2021</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project: PayBright (Core Loan systems)</h4>
-                                            <p>The core loan system is the end to end solution on which PayBright operates. PayBright provides small to medium loans to customers on their retail purchases instore and online. There are different products for different type of merchants form integrated solution with Samsung, to pay in 4 solution with Wayfair, to virtual card solution with eBay, platform solutions with Shopify and Klarna that PayBright offers. </p>
+                                            <p>The core loan system is the end-to-end solution on which Affirm (PayBright) operates. Affirm (PayBright) provides small to medium loans to customers on their retail purchases in-store and online. There are different products for different types of merchants from integrated solutions with Samsung, to pay in 4 solutions with Wayfair, to virtual card solutions with eBay, platform solutions with Shopify, and Klarna that Affirm (PayBright) offers.</p>
                                             <ul>
-												<li>Develop, update, deploy and maintain the core loan system features. Design and implement measures to ensure data integrity and ETL server.</li> 
-												<li>Review code and help peers to follow coding standers.</li> 
-												<li>Hire developers joining different rolls in the technology department</li> 
-												<li>Responsibilities also include creating task according to user stories and allocating time against them.</li> 
-												<li>Code and functional specification reviews and new product initiative discussions.</li> 
+                                                <li>A key member of the core loan re-write team, amid to create a .Net Core microservice solution.</li> 
+                                                <li>Develop, update, deploy and maintain the core loan system features. Design, implement and update ETL processes and measures to ensure data integrity. Review code and help peers to follow coding standers.</li> 
+                                                <li>Lead loan systems team, mentor developers and help other teams to solution projects. </li> 
+                                                <li>Hire developers joining different roles in the technology department (Junior developer to Tech Leads). </li> 
+                                                <li>Responsibilities also include creating tasks according to user stories and allocating time against them.</li> 
+                                                <li>Code and functional specification reviews and new product initiative discussions.</li> 
+                                                <li>Introduced major changes to backend development and deployment process using Redgate SQL and GitHub.</li>  
                                             </ul>
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                             <ul class="list-inline">
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.NET</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net Core</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microservice#</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">SQL Server 2016</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Web API</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Mongo db</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">MVC 5</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">React JS</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">RedGate SQL</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Node JS</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">GitHub</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">xUnit</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure AD</span></li>
                                             </ul>
                                         </div><!--//resume-timeline-item-desc-->
 
