--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
             <header class="resume-header pt-4 pt-md-0">
                 <div class="media flex-column flex-md-row">
-                    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/prithwirajLogo.jpg" alt="">
+                    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/IMG_0036.jpg" alt="">
                     <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
                         <div class="primary-info">
                             <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Prithwiraj Das</h1>
@@ -41,8 +41,8 @@
                         </div><!--//primary-info-->
                         <div class="secondary-info ml-md-auto mt-2">
                             <ul class="resume-social list-unstyled">
-                                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/prithwirajdas/</a></li>
-                                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>https://github.com/prithwiraj1991</a></li>
+                                <li class="mb-3"><a href="https://www.linkedin.com/in/prithwirajdas/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/prithwirajdas/</a></li>
+                                <li class="mb-3"><a href="https://github.com/prithwiraj1991"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>https://github.com/prithwiraj1991</a></li>
                                 <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-codepen fa-fw"></i></span>https://codepen.io/prithwiraj1991/</a></li>
                                 <!--<li><a href="#"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>yourwebsite.com</a></li> -->
                             </ul>
@@ -79,15 +79,55 @@
 
                                         <div class="resume-timeline-item-header mb-2">
                                             <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">SENIOR BACKEND ENGINEER </h3>
-                                                <div class="resume-company-name ml-auto">Paige AI (Velocity Global)</div>
+                                                <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE ENGINEER </h3>
+                                                <div class="resume-company-name ml-auto">BeyondTrust</div>
                                             </div><!--//row-->
                                             <div class="resume-position-time">May 2021 - Present</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Product: Endpoint Privilege management (EPM)</h4>
+                                            <p>Endpoint Privilege management is Privilege management software that BeyondTrust offer as a privilege management tool for Windows, Mac and Linux systems. BeoyndTrust is centralizing all its offerings under a single platform (BeyondTrust Platform), using a microservice architecture.</p>
+                                            <ul>
+                                                <li>Design, build and deploy microservices of the EPM solution for the BeyondTrust Platform.</li> 
+                                                <li>Work with architecture team and DevOps team to identify architectural requirements and design deployment pipelines for the applications. Update project templates API and deployment pipelines as required.</li> 
+                                                <li>Guided other teams new to microservices and BeyondTrust Platform development.</li> 
+                                            </ul>
+                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+                                            <ul class="list-inline">
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">.NET Core 6 & 7</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">WiX toolset</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Mongo db</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Terraform</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">AzureDevOps</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">xUnit</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">GitHub (GitHub Actions)</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">JFrog</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
+                                            </ul>
+                                        </div><!--//resume-timeline-item-desc-->
+
+                                    </article><!--//resume-timeline-item-->
+                                    <article class="resume-timeline-item position-relative pb-5">
+
+                                        <div class="resume-timeline-item-header mb-2">
+                                            <div class="d-flex flex-column flex-md-row">
+                                                <h3 class="resume-position-title font-weight-bold mb-1">SENIOR BACKEND ENGINEER </h3>
+                                                <div class="resume-company-name ml-auto">Paige AI (Velocity Global)</div>
+                                            </div><!--//row-->
+                                            <div class="resume-position-time">May 2021 - July2022</div>
+                                        </div><!--//resume-timeline-item-header-->
+                                        <div class="resume-timeline-item-desc">
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project/Team/Domain: Full Focus Viewer (FDA cleared medical device)</h4>
-                                            <p>Core contributor to the upgrades of Paige's FullFocus digital pathology platform to .Net 6. Added new APIs to support new product integration, expanding product features and new way of supporting product.</p>
-                                            <p></p>
+                                            <p>FullFocus Viewer is a digital pathological slide viewing platform an FDA cleared medical device. This platform is responsible to show pathological slide images to pathologist in scientifically accurate manner, with an option to over lay AI generated heat map of potential cancerous cells to complete their diagnosis.</p>
+                                            <ul>
+                                                <li>Core contributor to the upgrades of Paige's FullFocus digital pathology platform to .Net 6. Added new APIs to support new product integration, expanding product features and new way of supporting product.</li> 
+                                                <li>Lead FullFocus Viewer backend team on planning, designing, creating, deploying, monitoring and supporting APIs both on .Net core and Python, with in the FullFocus Viewer domain and on cross domain.</li> 
+                                                <li>Work with other teams on new feature designed and been a key resource for application integration for my team.</li> 
+                                            </ul>
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                             <ul class="list-inline">
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">NET (Core 5,6 and Framework)</span></li>
@@ -103,6 +143,7 @@
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">GitLab (Gitlab CI)</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">JFrog</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Redis</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microservice</span></li>
                                             </ul>
                                         </div><!--//resume-timeline-item-desc-->
 
@@ -131,7 +172,7 @@
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
                                             <ul class="list-inline">
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net Core</span></li>
-                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microservice#</span></li>
+                                                <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microservice</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">C#</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">T-SQL</span></li>
                                                 <li class="list-inline-item"><span class="badge badge-primary badge-pill">Web API</span></li>
@@ -275,32 +316,32 @@
                                         <li class="mb-2">
                                             <div class="resume-skill-name">C#</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
                                             <div class="resume-skill-name">SQL/T-SQL</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
                                             <div class="resume-skill-name">.Net/.Net Core</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 83%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
 
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">Web API/Web Services</div>
+                                            <div class="resume-skill-name"> API/Microservices</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">HTML/CSS</div>
+                                            <div class="resume-skill-name">Python</div>
                                             <div class="progress resume-progress">
-                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                                <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
                                         </li>
                                     </ul>
@@ -344,8 +385,12 @@
                                         <li class="list-inline-item"><span class="badge badge-light">T-SQL</span></li>
                                       	<li class="list-inline-item"><span class="badge badge-light">Web API</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">.Net Core</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Azure</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">AzureDevOps</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">AWS</span></li>
+                                        <li class="list-inline-item"><span class="badge badge-light">CI/CD</span></li>
                                       	<li class="list-inline-item"><span class="badge badge-light">Code Review</span></li>
-                                      	<li class="list-inline-item"><span class="badge badge-light">Code Deployment</span></li>
                                        	<li class="list-inline-item"><span class="badge badge-light">Solutioning</span></li>
                                         <li class="list-inline-item"><span class="badge badge-light">JSON/XML</span></li> 
                                         <li class="list-inline-item"><span class="badge badge-light">JavaScript</span></li>
@@ -367,7 +412,6 @@
                                         <li class="list-inline-item"><span class="badge badge-light">PowerShell </span></li>
                                         <li class="list-inline-item"><span class="badge badge-light"> Dot Net Nuke CMS </span></li> 
                                         <li class="list-inline-item"><span class="badge badge-light">Umbraco CMS </span> </li> 
-										
                                         <li class="list-inline-item"><span class="badge badge-light"> Dynamics CRM</li> 
                                         
 <!-- •	Databases: 	Microsoft SQL Server 2008 and 2012, Oracle 11g and My SQL
