--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                                 <h3 class="resume-position-title font-weight-bold mb-1">SENIOR SOFTWARE ENGINEER </h3>
                                                 <div class="resume-company-name ml-auto">BeyondTrust</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">June 2022 - Present</div>
+                                            <div class="resume-position-time">May 2022 - Present</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Product: Endpoint Privilege management (EPM)</h4>
@@ -118,7 +118,7 @@
                                                 <h3 class="resume-position-title font-weight-bold mb-1">SENIOR BACKEND ENGINEER </h3>
                                                 <div class="resume-company-name ml-auto">Paige AI (Velocity Global)</div>
                                             </div><!--//row-->
-                                            <div class="resume-position-time">May 2021 - July2022</div>
+                                            <div class="resume-position-time">May 2021 - May2022</div>
                                         </div><!--//resume-timeline-item-header-->
                                         <div class="resume-timeline-item-desc">
                                             <h4 class="resume-timeline-item-desc-heading font-weight-bold">Project/Team/Domain: Full Focus Viewer (FDA cleared medical device)</h4>
