--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
                     <div class="resume-section-content">
                         <p class="mb-0">
                             <ul style="list-style-type:disc;">
-                                <li>Senior software developer with around 9 years of experience in Microsoft technologies (.Net), C#, SQL, and API development.</li>
+
+                                <li>Senior software developer with around 10 years of experience in Microsoft technologies (.Net), C#, SQL, and API development.</li>
                                 <li>Strong in product development, product rewrite, technology upgrade, and integration projects.</li>
                                 <li>Backend architecture and development, lead the team and mentor juniors, and build team.</li>
                                 <li>Strong analytical problem-solving ability, cooperative, team player, and well organized.</li>
-                                <li>Passionate about writing clean, reusable, and robust code. Test-driven development. Domain-driven design.</li>
-                                <li>Developing Scalable applications using design patterns and SOLID principles</li>
+                                <li>Passionate about writing clean, reusable, and robust code. Test-driven development. Domain-driven design</li>
+                                <li>Developing scalable applications using design patterns and SOLID principles</li>
                                 <li>Worked on Python, DevExpress, Kendo UI, Umbraco Dot Net Nuke, and Dynamics CRM.</li>
                                 <li>Currently evaluating Kubernetes, Terraforms, AWS, Azure, React for new initiatives.</li>
                             </ul>
