--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.1.1/js/all.js" integrity="sha384-BtvRZcyfv4r0x/phJt9Y9HhnN5ur1Z+kZbKVgzVBAlQZX4jvAuImlIz+bG7TS00a" crossorigin="anonymous"></script>
 
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/pillar-2.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/pillar-4.css">
 
 
 </head>
@@ -57,7 +57,7 @@
                         <p class="mb-0">
                             <ul style="list-style-type:disc;">
                                 <li>Highly analytical and dynamic software engineer with 10 years of experience</li>
-                                <li>Skilled in designing and implementing innovative software solutions<li></li>
+                                <li>Skilled in designing and implementing innovative software solutions</li>
                                 <li>Proficient in developing and deploying cloud-based SAAS applications using .NET, AWS, and Azure</li>
                                 <li>Strong leadership experience in a team-oriented workplace</li>
                                 <li>Robust project management skills with a track record of delivering successful projects</li>
