--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 									
                                     <ul class="list-unstyled">
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">JS/JQuery</div>
+                                            <div class="resume-skill-name">Architecture/Team leadership</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 73%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
@@ -397,7 +397,7 @@
                                             </div>
                                         </li>
                                         <li class="mb-2">
-                                            <div class="resume-skill-name">CMS/CRM</div>
+                                            <div class="resume-skill-name">AWS/Azure</div>
                                             <div class="progress resume-progress">
                                                 <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 82%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
