--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Prithwiraj Das</h1>
                             <div class="title mb-3">Lead Software Developer</div>
                             <ul class="list-unstyled">
-                                <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>prithwirajDas07@gmail.com</a></li>
+                                <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>prithwiraj1991@gmail.com</a></li>
                                 <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>647 705 6210</a></li>
                             </ul>
                         </div><!--//primary-info-->
