--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                                 <li>Spearheaded the GM MyRewards integration for Dealer-FX, securing exclusive vendor status across all GM dealerships in North America.</li>
                                 <li>Deep expertise in .NET (C#), Node.js, AWS (Lambda, SAM, EKS), Azure, PostgreSQL, and modern front-end frameworks like Angular.</li>
                                 <li>Recognized for balancing hands-on technical leadership with strategic execution to ensure performance, reliability, and growth.</li>
+                                <li>Experienced in recruiting, mentoring, and scaling engineering teams while driving delivery excellence across agile SDLC processes.</li>
+                                <li>Proficient in architecting and deploying cloud-native solutions using AWS and Azure with strong understanding of DevOps and CI/CD pipelines.</li>
+                                <li>Skilled in identifying business needs, designing innovative solutions, and leading projects from inception to successful delivery.</li>
                             </ul>
                         </p>
                     </div>
