--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="secondary-info ml-md-auto mt-2">
                             <ul class="resume-social list-unstyled">
                                 <li class="mb-3"><a href="https://www.linkedin.com/in/prithwirajdas/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/prithwirajdas/</a></li>
-                                <li class="mb-3"><a href="https://github.com/prithwiraj1991"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>https://github.com/prithwiraj1991</a></li>
+                                <li class="mb-3"><a href="https://github.com/prithwiraj1991"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>https://github.com/prithwirajdas007</a></li>
                                 <!-- <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-codepen fa-fw"></i></span>https://codepen.io/prithwiraj1991/</a></li> -->
                                 <!--<li><a href="#"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>yourwebsite.com</a></li>-->
                             </ul>
